Style screen to prevent overflow

--- a/style.css
+++ b/style.css
@@ -19,16 +19,32 @@ body {
     border-right: 1px solid #111;
 }
 
-#display {
+#screen {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
     width: 100%;
-    height: 120px;
-    padding: 59px 5px;
+    min-height: 120px;
+    padding: 0px 5px;
     background-color: #263651;
     border: 1px solid black;
     color: #fff;
     font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: end;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+#display {
+    min-height: 32px;
+}
+
+#previousCalc {
+    min-height: 45px;
+    padding-top: 10px;
+    font-size: 22px;
 }
 
 .calc-button {
